Cascading Change Log

2.0.0 [unreleased]

  Added c.p.Props base and sub-classes to simplify managing Cascading and Hadoop related properties.

  Added typed set and add methods to c.t.Tuple and c.t.TupleEntry.

  Changed packages for many internal types to simplify documentation.

  Changed c.f.Flow and c.f.FlowStep to interfaces to hide internal only methods.

  Added support for trapping actual raw input data as read by a c.s.Scheme during processing by allowing
  c.t.TupleException to accept a payload c.t.Tuple instance with the data to be trapped. Updated c.s.h.TextDelimited
  and c.s.l.TextDelimited to provide a proper payload when sourcing and parsing text.

  Fixed issue where a c.p.GroupBy following a c.p.Every could not see result Aggregator fields from the Every instance.

  Changed c.s.h.TextDelimited and c.s.l.TextDelimited to optionally write headers if writeHeaders or hasHeaders
  is set to true. If Fields.ALL or Fields.UNKNOWN is declared, during sinking the field names will be resolved
  at runtime.

  Added the c.t.TupleCollectionFactory and c.t.TupleMapFactory interfaces and relevant implementations to allow
  custom c.t.Spillable types to be plugged into a given execution. Spillable types are used to back in memory
  collections to disk to improve scalability of c.p.CoGroup and c.p.HashJoin pipes on different platforms.

  Fixed issue where a c.s.Scheme was not seeing properly resolved fields if they were not declared in the Scheme
  instance. This allows a Scheme declared to sink c.t.Fields#ALL to see the actual field names during the
  Scheme#sinkPrepare() and Scheme#sink() methods.

  Changed c.t.TupleEntrySchemeSelector#prepare method to protected and is now called lazily internally during
  the first add method. This should simplify custom c.t.Tap development and allows for lazily setting of resolved
  sink fields.

  Fixed issue where the grouping Tuple resulting from a c.p.CoGroup did not properly reflect all the current